k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 10mwt
  labels:
    app.kubernetes.io/part-of: 10mwt
